After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 776897 - The invocation is leaked when handling ExchangeSecretKeys and SignOut
The invocation is leaked when handling ExchangeSecretKeys and SignOut
Status: RESOLVED FIXED
Product: gnome-online-accounts
Classification: Core
Component: Kerberos
3.22.x
Other All
: Normal normal
: ---
Assigned To: GNOME Online Accounts maintainer(s)
GNOME Online Accounts maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-01-05 12:39 UTC by Debarshi Ray
Modified: 2017-01-10 14:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
identity: Don't leak the invocation when handling SignOut (870 bytes, patch)
2017-01-05 12:40 UTC, Debarshi Ray
committed Details | Review
identity: Don't leak the invocation when handling ExchangeSecretKeys (886 bytes, patch)
2017-01-05 13:41 UTC, Debarshi Ray
committed Details | Review
identity: Don't leak operation_result when handling ExchangeSecretKeys (1.47 KB, patch)
2017-01-05 14:39 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2017-01-05 12:39:44 UTC
This is another instance of bug 767952 in the wild. We should unref the GDBusMethodInvocation in on_sign_out_handled.
Comment 1 Debarshi Ray 2017-01-05 12:40:47 UTC
Created attachment 342948 [details] [review]
identity: Don't leak the invocation when handling SignOut
Comment 2 Debarshi Ray 2017-01-05 13:41:07 UTC
Created attachment 342950 [details] [review]
identity: Don't leak the invocation when handling ExchangeSecretKeys
Comment 3 Debarshi Ray 2017-01-05 14:37:16 UTC
Comment on attachment 342950 [details] [review]
identity: Don't leak the invocation when handling ExchangeSecretKeys

Oops! I just pushed this to master by mistake. I'd still welcome some feedback.
Comment 4 Debarshi Ray 2017-01-05 14:39:31 UTC
Created attachment 342964 [details] [review]
identity: Don't leak operation_result when handling ExchangeSecretKeys
Comment 5 Ray Strode [halfline] 2017-01-09 21:34:47 UTC
Review of attachment 342948 [details] [review]:

seems right since we ref the invocation in goa_identity_service_handle_sign_out
Comment 6 Ray Strode [halfline] 2017-01-09 21:35:34 UTC
Review of attachment 342950 [details] [review]:

same story, we ref the invocation in goa_identity_service_handle_sign_out so unref is right.
Comment 7 Ray Strode [halfline] 2017-01-09 21:37:07 UTC
Review of attachment 342964 [details] [review]:

yup looks right.  we ref it when we call g_bus_watch_name so we should unref the initial reference
Comment 8 Debarshi Ray 2017-01-10 14:28:26 UTC
Pushed to master, gnome-3-22 and gnome-3-20.