identity: Don't leak the invocation when handling SignOut

https://bugzilla.gnome.org/show_bug.cgi?id=776897